# openxgram

./: .gitignore  .token-savior-cache.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  install.sh  package.json  version.json
crates/openxgram-a2a/: Cargo.toml
crates/openxgram-a2a/src/: agent_card.rs  client.rs  lib.rs  mcp.rs  task.rs
crates/openxgram-a2a/tests/: integration.rs
crates/openxgram-acp/: Cargo.toml
crates/openxgram-acp/src/: client.rs  handlers.rs  lib.rs  mcp.rs  registry.rs  rpc.rs  session.rs  transport.rs  types.rs
crates/openxgram-acp/tests/: integration.rs
crates/openxgram-adapter/: Cargo.toml
crates/openxgram-adapter/src/: channel_mcp.rs  discord_gateway.rs  lib.rs  telegram_bot.rs
crates/openxgram-adapter/tests/: poll.rs  send.rs
crates/openxgram-anp/: Cargo.toml
crates/openxgram-anp/src/: client.rs  discovery.rs  lib.rs  mcp.rs  message.rs
crates/openxgram-anp/tests/: integration.rs
crates/openxgram-channel/: Cargo.toml
crates/openxgram-channel/src/: adapter.rs  lib.rs  peer.rs  route.rs  server.rs
crates/openxgram-channel/tests/: server_smoke.rs
crates/openxgram-cli/: Cargo.toml  build.rs
crates/openxgram-cli/src/: acp_peer_bridge.rs  age_backup.rs  agent.rs  aoe_acp_discovery.rs  audit.rs  auth.rs  auth_gate.rs  backup.rs  backup_push.rs  bot.rs  channel.rs  channels.rs  chat.rs  daemon.rs  daemon_gui.rs  daemon_gui_a2a.rs  daemon_gui_acp.rs  daemon_gui_sessions.rs  daemon_gui_terminal.rs  daemon_gui_wallets.rs  daemon_peer_sync.rs  daemon_singleton.rs  daemon_workers.rs  doctor.rs  dump.rs  eas.rs  find.rs  free_tier.rs  gui.rs  hitl.rs  identity.rs  identity_handle.rs  identity_propagate.rs  identity_registry.rs  import_app.rs  init.rs  invite.rs  ledger_gateway.rs  lib.rs  link.rs  (+47 more)
crates/openxgram-cli/tests/: agent_inject.rs  audit.rs  backup_push.rs  cold_backup.rs  cross_node_conversation.rs  daemon.rs  discord_gateway_smoke.rs  doctor.rs  dump.rs  external_trade_demo.rs  identity_update_auth.rs  inbound_pipeline.rs  init.rs  marketplace_connect.rs  mcp_http.rs  mcp_serve.rs  mcp_tokens.rs  memory.rs  memory_export.rs  migrate.rs  notify.rs  notify_channel.rs  notify_listen.rs  notify_setup.rs  onchain_pay.rs  patterns.rs  payment.rs  peer.rs  peer_send.rs  phase1_acceptance.rs  schedule_cli.rs  self_trigger_e2e.rs  session.rs  session_binding.rs  status_reset.rs  systemd.rs  traits.rs  tui.rs  two_node_e2e.rs  uninstall.rs  (+3 more)
crates/openxgram-core/: Cargo.toml
crates/openxgram-core/src/: confirm.rs  env.rs  lib.rs  paths.rs  ports.rs  time.rs
crates/openxgram-db/: Cargo.toml
crates/openxgram-db/migrations/: 0001_init.sql  0002_message_embeddings.sql  0003_episodes.sql  0004_patterns.sql  0005_traits.sql  0006_vault.sql  0007_vault_acl.sql  0008_vault_pending.sql  0009_mcp_tokens.sql  0010_peers.sql  0011_payment_intents.sql  0012_peer_eth_address.sql  0013_audit_chain.sql  0014_kek_rotations.sql  0015_payment_daily_limits.sql  0016_orchestration.sql  0017_conversation_id.sql  0018_wiki_pages.sql  0019_mistakes.sql  0020_action_patterns.sql  0021_marketplace_cache.sql  0021_sub_wallets.sql  0022_messenger_full.sql  0022_users.sql  0023_messenger_attachments.sql  0024_memory_full.sql  0025_session_channel_bindings.sql  0026_full_specs.sql  0028_external_agent.sql  0029_workflows.sql  0030_identity_settings.sql  0031_role_policies.sql  0032_session_aliases.sql  0033_claude_ingest.sql  0034_discord_bots.sql  0035_agent_capabilities.sql  0036_messenger_group.sql  0037_agent_orchestration.sql  0038_agent_templates.sql  0039_memory_embeddings.sql  (+30 more)
crates/openxgram-db/src/: connection.rs  error.rs  lib.rs  migrate.rs  orchestration.rs  pragma.rs  schema.rs
crates/openxgram-db/tests/: integration.rs
crates/openxgram-did/: Cargo.toml
crates/openxgram-did/src/: lib.rs  wba.rs
crates/openxgram-did/tests/: round_trip.rs
crates/openxgram-eas/: Cargo.toml
crates/openxgram-eas/src/: attest.rs  gas.rs  lib.rs  schema.rs  store.rs
crates/openxgram-indexer-sdk/: Cargo.toml
crates/openxgram-indexer-sdk/src/: crawler.rs  lib.rs  ranking.rs  service.rs  subscriber.rs
crates/openxgram-keystore/: Cargo.toml
crates/openxgram-keystore/src/: blob.rs  error.rs  hd.rs  keypair.rs  lib.rs  mnemonic.rs  storage.rs
crates/openxgram-keystore/tests/: integration.rs  rekey_resilience.rs
crates/openxgram-manifest/: Cargo.toml
crates/openxgram-manifest/schema/: install-manifest.schema.json
crates/openxgram-manifest/src/: lib.rs
crates/openxgram-manifest/tests/: integration.rs
crates/openxgram-marketplace/: Cargo.toml
crates/openxgram-marketplace/src/: agent.rs  client.rs  lib.rs  mcp.rs  policy.rs
crates/openxgram-marketplace/tests/: integration.rs
crates/openxgram-mcp/: Cargo.toml
crates/openxgram-mcp/src/: lib.rs
crates/openxgram-mcp/tests/: handler.rs
crates/openxgram-memory/: Cargo.toml
crates/openxgram-memory/src/: claude_compat.rs  embed.rs  episode.rs  lib.rs  memory.rs  message.rs  pattern.rs  session.rs  stats.rs  traits.rs  transfer.rs  util.rs
crates/openxgram-memory/tests/: conversation.rs  embedder_factory.rs  memories.rs  patterns.rs  recall.rs  reflection.rs  traits.rs  traits_derive.rs
crates/openxgram-mistakes/: Cargo.toml
crates/openxgram-mistakes/src/: lib.rs  mcp.rs  mistake.rs  store.rs
crates/openxgram-mistakes/tests/: integration.rs
crates/openxgram-nostr/: Cargo.toml
crates/openxgram-nostr/src/: lib.rs  nip65.rs  ratchet.rs  relay.rs  sink.rs  source.rs
crates/openxgram-orchestration/: Cargo.toml
crates/openxgram-orchestration/src/: chain.rs  lib.rs  scheduled.rs
crates/openxgram-orchestration/tests/: chain_run.rs  scheduled_round_trip.rs  self_trigger.rs
crates/openxgram-payment/: Cargo.toml
crates/openxgram-peer/: Cargo.toml
crates/openxgram-scheduler/: Cargo.toml
crates/openxgram-transport/: Cargo.toml
crates/openxgram-vault/: Cargo.toml
crates/openxgram-wiki/: Cargo.toml  README.md
docs/: oxg.md  (+2 more)
ui/tauri/: .gitignore  Cargo.toml  DEPRECATED.md  README.md  tauri.conf.json
(+264 files in other folders)
