[workspace]
resolver = "2"
members = [
    "crates/openxgram-core",
    "crates/openxgram-keystore",
    "crates/openxgram-db",
    "crates/openxgram-manifest",
    "crates/openxgram-memory",
    "crates/openxgram-vault",
    "crates/openxgram-scheduler",
    "crates/openxgram-transport",
    "crates/openxgram-adapter",
    "crates/openxgram-mcp",
    "crates/openxgram-peer",
    "crates/openxgram-payment",
    "crates/openxgram-cli",
]
# ui/tauri 는 platform 의존(webkit2gtk 등) 이라 워크스페이스 외부.
# `cd ui/tauri && cargo tauri dev` 로 별도 빌드.
exclude = ["ui/tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenXgram/openxgram"
authors = ["OpenXgram Contributors"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# 키페어·시드
k256 = { version = "0.13", features = ["ecdsa"] }
bip39 = { version = "2", features = ["rand_core"] }
coins-bip32 = "0.13"
sha3 = "0.10"

# 암호화
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }

# DB
rusqlite = { version = "0.39", features = ["bundled"] }

# HTTP
reqwest = { version = "0.13", features = ["json", "rustls", "webpki-roots"], default-features = false }
axum = "0.8"
tokio-cron-scheduler = "0.13"

# 기타
hex = "0.4"
