[package]
name = "openxgram-adapter"
description = "Outbound message adapters (Discord/Telegram) for OpenXgram"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
