[package]
name = "openxgram-cli"
description = "xgram — OpenXgram command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
fastembed = ["openxgram-memory/fastembed"]

[lib]
name = "openxgram_cli"
path = "src/lib.rs"

[[bin]]
name = "xgram"
path = "src/main.rs"

[dependencies]
openxgram-core = { path = "../openxgram-core" }
openxgram-keystore = { path = "../openxgram-keystore" }
openxgram-db = { path = "../openxgram-db" }
openxgram-manifest = { path = "../openxgram-manifest" }
openxgram-adapter = { path = "../openxgram-adapter" }
openxgram-mcp = { path = "../openxgram-mcp" }
openxgram-memory = { path = "../openxgram-memory" }
openxgram-nostr = { path = "../openxgram-nostr" }
openxgram-did = { path = "../openxgram-did" }
openxgram-channel = { path = "../openxgram-channel" }
openxgram-peer = { path = "../openxgram-peer" }
openxgram-payment = { path = "../openxgram-payment" }
openxgram-scheduler = { path = "../openxgram-scheduler" }
openxgram-transport = { path = "../openxgram-transport" }
openxgram-vault = { path = "../openxgram-vault" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
chrono = { workspace = true }
hex = { workspace = true }
sha2 = "0.10"
tar = "0.4"
flate2 = "1"
ratatui = "0.29"
k256 = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
getrandom = "0.3"
tokio-cron-scheduler = { workspace = true }
age = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
futures-util = "0.3"
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
serial_test = { workspace = true }
nostr-relay-builder = "0.43"
wiremock = "0.6"
