[package]
name = "openxgram-cli"
description = "xgram — OpenXgram command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
fastembed = ["openxgram-memory/fastembed"]

[lib]
name = "openxgram_cli"
path = "src/lib.rs"

[[bin]]
name = "xgram"
path = "src/main.rs"

[dependencies]
openxgram-core = { path = "../openxgram-core" }
openxgram-keystore = { path = "../openxgram-keystore" }
openxgram-db = { path = "../openxgram-db" }
openxgram-manifest = { path = "../openxgram-manifest" }
openxgram-adapter = { path = "../openxgram-adapter" }
openxgram-channel = { path = "../openxgram-channel" }
openxgram-did = { path = "../openxgram-did" }
openxgram-mcp = { path = "../openxgram-mcp" }
openxgram-memory = { path = "../openxgram-memory" }
openxgram-nostr = { path = "../openxgram-nostr" }
openxgram-orchestration = { path = "../openxgram-orchestration" }
openxgram-peer = { path = "../openxgram-peer" }
openxgram-payment = { path = "../openxgram-payment" }
openxgram-scheduler = { path = "../openxgram-scheduler" }
openxgram-transport = { path = "../openxgram-transport" }
openxgram-vault = { path = "../openxgram-vault" }
openxgram-eas = { path = "../openxgram-eas" }
openxgram-indexer-sdk = { path = "../openxgram-indexer-sdk" }
openxgram-wiki = { path = "../openxgram-wiki" }
openxgram-mistakes = { path = "../openxgram-mistakes" }
openxgram-patterns = { path = "../openxgram-patterns" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
rpassword = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
sha2 = "0.10"
tar = "0.4"
flate2 = "1"
ratatui = "0.29"
k256 = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
getrandom = "0.3"
argon2 = { workspace = true }
hmac = "0.12"
base64 = "0.22"
tokio-cron-scheduler = { workspace = true }
age = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
futures-util = "0.3"
reqwest = { workspace = true }
serde_yaml = "0.9"
regex = "1"
urlencoding = "2"
lettre = { version = "0.11", features = ["smtp-transport", "builder", "rustls-tls"], default-features = false }
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
toml = "0.8"
libc = "0.2"
qrcode = "0.14"
# Web GUI 정적 자산 임베드 (PRD-OpenXgram §4.8 v1.3 결정 13).
# 빌드 시 ui/web/dist/ 통째로 바이너리에 포함 → daemon 이 /gui/* 자체 서빙.
# nginx/별도 호스팅 불필요. dist 가 비어있어도 컴파일 통과 (404 만 응답).
include_dir = "0.7"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
serial_test = { workspace = true }
nostr-relay-builder = "0.43"
wiremock = "0.6"
