[package]
name = "openxgram-core"
description = "Shared paths, constants, time, and env helpers for OpenXgram crates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono = { workspace = true }
thiserror = { workspace = true }
