[package]
name = "openxgram-db"
description = "SQLite + sqlite-vec storage layer for OpenXgram"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
openxgram-core = { path = "../openxgram-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
# TODO(Phase 2): Res 검토 후 추가
# rusqlite = { workspace = true }
# sqlite-vec = "0.1"    # 벡터 검색 확장
