[package]
name = "openxgram-db"
description = "SQLite + sqlite-vec storage layer for OpenXgram"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
openxgram-core = { path = "../openxgram-core" }
rusqlite = { workspace = true }
sqlite-vec = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
