[package]
name = "openxgram-eas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
openxgram-core = { path = "../openxgram-core" }
openxgram-db = { path = "../openxgram-db" }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
