[package]
name = "openxgram-indexer-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
axum = { workspace = true }
tokio = { workspace = true }
openxgram-eas = { path = "../openxgram-eas" }
openxgram-core = { path = "../openxgram-core" }
openxgram-db = { path = "../openxgram-db" }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
reqwest = { workspace = true }
