[package]
name = "openxgram-keystore"
description = "Keypair management for OpenXgram agents (secp256k1 + BIP-39)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
openxgram-core = { path = "../openxgram-core" }
k256 = { workspace = true }
bip39 = { workspace = true }
coins-bip32 = { workspace = true }
sha3 = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
