[package]
name = "openxgram-manifest"
description = "install-manifest types, persistence, and verification for OpenXgram"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }

[dev-dependencies]
openxgram-keystore = { path = "../openxgram-keystore" }
tempfile = "3"
