[package]
name = "openxgram-orchestration"
description = "Scheduled messages and message chains (multi-agent workflow orchestration)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
openxgram-db = { path = "../openxgram-db" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.9"
uuid = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
cron = "0.12"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.9"
