[package]
name = "openxgram-peer"
description = "Peer registry — 머신 간 통신을 위한 식별·주소록 (XMTP/HTTP/Tailscale 통합 baseline)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
openxgram-core = { path = "../openxgram-core" }
openxgram-db = { path = "../openxgram-db" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
