[package]
name = "openxgram-scheduler"
description = "Cron-based job scheduler for OpenXgram (nightly reflection, etc.)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
openxgram-db = { path = "../openxgram-db" }
openxgram-memory = { path = "../openxgram-memory" }
tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
# rc.216 — patterns → wiki_pages 격상에 필요 (Karpathy 패턴 본질 fix)
rusqlite = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
