[package]
name = "openxgram-vault"
description = "Encrypted credential vault for OpenXgram (PRD §8)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
openxgram-core = { path = "../openxgram-core" }
openxgram-db = { path = "../openxgram-db" }
openxgram-keystore = { path = "../openxgram-keystore" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
totp-rs = { version = "5", default-features = false, features = ["otpauth", "gen_secret"] }

[dev-dependencies]
tempfile = "3"
totp-rs = { version = "5", default-features = false, features = ["otpauth", "gen_secret"] }
