# OpenXgram Tauri Desktop — Phase 2 baseline.
#
# 워크스페이스 분리: cargo test / clippy --workspace 가 webkit2gtk 등 GUI 의존을
# 끌어오지 않도록 separate Cargo project. 빌드 시:
#   cd ui/tauri && cargo tauri build
#
# Linux 의존: libwebkit2gtk-4.1-dev, libgtk-3-dev, libsoup-3.0-dev
# macOS: 추가 의존 없음 (Apple WebKit 사용)
# Windows: WebView2 (Edge 기반) — 보통 OS 기본 포함

[package]
name = "openxgram-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "openxgram_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# custom-protocol: release 빌드가 bundled frontend (frontendDist) 로 페이지를 로드하도록 활성화.
# 미활성 시 release 에서도 devUrl (http://localhost:1420) 로 가서 'localhost 연결 거부' 페이지가 뜸.
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# Phase 2a-client: daemon HTTP API (`/v1/gui/*`) 호출용.
# rustls — openssl 의존 회피, cross-platform 동일 동작.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# OpenXgram core stores — Tauri invoke 핸들러가 직접 호출.
openxgram-core = { path = "../../crates/openxgram-core" }
openxgram-db = { path = "../../crates/openxgram-db" }
openxgram-vault = { path = "../../crates/openxgram-vault" }
openxgram-memory = { path = "../../crates/openxgram-memory" }
openxgram-peer = { path = "../../crates/openxgram-peer" }
openxgram-payment = { path = "../../crates/openxgram-payment" }
openxgram-orchestration = { path = "../../crates/openxgram-orchestration" }
# CLI 의 notify_setup helper (telegram_get_me 등) 직접 사용.
openxgram-cli = { path = "../../crates/openxgram-cli", default-features = false }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
openxgram-orchestration = { path = "../../crates/openxgram-orchestration" }
openxgram-cli = { path = "../../crates/openxgram-cli", default-features = false }

[features]
default = []
